<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7e7e7"
    android:orientation="horizontal"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    android:paddingBottom="10dp"
    tools:context=".Level4" >

    <!-- 左侧部分 -->

    <RelativeLayout
        android:layout_width="230dp"
        android:layout_height="match_parent" >

        <!-- 命令 -->

        <LinearLayout
            android:id="@+id/linlayMingling"
            android:layout_width="230dp"
            android:layout_height="35dp"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/imgbtnZhixing"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/zhixing" />

            <ImageButton
                android:id="@+id/imgbtnZuozhuan"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/zuozhuan" />

            <ImageButton
                android:id="@+id/imgbtnYouzhuan"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/youzhuan" />

            <ImageButton
                android:id="@+id/imgbtnHanshu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/hanshu" />

            <ImageButton
                android:id="@+id/imgbtnXunhuan"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/xunhuan" />

            <ImageButton
                android:id="@+id/imgbtnWancheng"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/wancheng" />
        </LinearLayout>
        
        <!-- 游戏区-->
        <com.example.game0908.VisionView 
            android:layout_below="@id/linlayMingling"
            android:layout_width="230dp"
            android:layout_height="230dp"/>
        
        <com.example.game0908.MyView4
            android:layout_below="@id/linlayMingling"
            android:id="@+id/game4"
            android:layout_width="230dp"
            android:layout_height="230dp"
            />

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/startAndstop"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:text="@string/start"
                android:textSize="12sp" />

            <!-- 
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:textSize="16sp"
                android:text="0"
                android:textColor="#000000"
                android:gravity="right" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="分"
                android:textColor="#000000"
                android:layout_marginLeft="5dp" />
             -->
            
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <!-- 右侧部分 -->

    <LinearLayout
        android:layout_width="210dp"
        android:layout_height="match_parent"
        android:background="#eeeeee"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linlayMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="0dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main"
                android:textColor="#000" />

            <!-- 主函数 -->

            <TableLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageButton
                        android:id="@+id/imgbtnstepM1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepM2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepM3"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepM4"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepM5"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                    <ImageButton
                        android:id="@+id/imgbtnstepM6"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepM7"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepM8"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepM9"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepM10"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                    <ImageButton
                        android:id="@+id/imgbtnstepM11"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepM12"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepM13"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepM14"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepM15"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <LinearLayout
            android:id="@+id/linlayFun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="0dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fun"
                android:textColor="#000" />

            <!-- 辅助函数 -->

            <TableLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageButton
                        android:id="@+id/imgbtnstepF1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepF2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepF3"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepF4"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepF5"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                    <ImageButton
                        android:id="@+id/imgbtnstepF6"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepF7"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepF8"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepF9"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepF10"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <LinearLayout
            android:id="@+id/linlayFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="0dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xunhuan"
                android:textColor="#000" />

            <!-- for循环 -->

            <TableLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageButton
                        android:id="@+id/imgbtnstepf1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepf2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepf3"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepf4"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />

                    <ImageButton
                        android:id="@+id/imgbtnstepf5"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/step" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>